# rl-gym-fastapi-platform

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/routes/: benchmarks.py  environments.py  health.py  simulations.py
app/core/: config.py
app/domain/: __init__.py  environments.py  registry.py  schemas.py
app/services/: benchmark.py  jobs.py  policies.py  simulation.py
app/workers/: __init__.py
docs/: gymnasium-extension.md  production.md
scripts/: smoke.sh
tests/: conftest.py  test_benchmarks.py  test_environments.py  test_health.py  test_simulations.py
