[project]
name = "rl-gym-fastapi-platform"
version = "0.1.0"
description = "Production-style FastAPI backend for reinforcement-learning experiment workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Krishna" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]
rl = [
    "gymnasium>=0.29.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

